<resources>
    <string name="app_name">PantryApp</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="google_maps_API_key">AIzaSyCBfgJHDfC38GCW_miFEgoqyew-0isMzOg</string>
    
    <string name="create_item_text">Create New Item</string>
    <string name="edit_item_text">Edit Item</string>
    <string name="name_text">Name</string>
    <string name="amount_text">Amount</string>
    <string name="amount_unit">Unit</string>
    <string name="expiry_text">Expiry Date</string>
    <string name="add_to_search_text">Add to Search</string>
    <string name="aliases_text">Aliases</string>
    <string name="create_text">Create</string>
    <string name="map_string">Map</string>
    <string name="close_text">Close</string>
    <string name="delete_text">Delete</string>
    <string name="recipes_string">Recipes</string>
    <string name="pantry_string">Pantry</string>
    <string name="find_store_string">Find Store</string>
    <string name="shopping_list_string">Shopping List</string>
    <string name="pantry_app">Pantry App</string>

</resources>
