<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NewItemActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/header" />

        <TextView
            android:id="@+id/titletv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal|center_vertical"
            android:layout_weight="3"
            android:fontFamily="sans-serif"
            android:text="@string/create_item_text"
            android:textAlignment="center"
            android:textColor="@color/pantry_app_color"
            android:textSize="20sp" />

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/nameet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:ems="10"
            android:hint="Name"
            android:inputType="textAutoComplete" />

        <EditText
            android:id="@+id/expiryet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:ems="10"
            android:hint="@string/expiry_text"
            android:inputType="textPersonName" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/amountet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="5"
                android:hint="@string/amount_text"
                android:inputType="number|numberDecimal" />

            <EditText
                android:id="@+id/unitet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="4"
                android:hint="@string/amount_unit"
                android:inputType="text" />
        </LinearLayout>

        <EditText
            android:id="@+id/aliaseset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:ems="10"
            android:hint="@string/aliases_text"
            android:inputType="textMultiLine"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <CheckBox
            android:id="@+id/searchbtntog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="92dp"
            android:text="@string/add_to_search_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:orientation="horizontal"
            android:paddingBottom="10dp">

            <Button
                android:id="@+id/cancelbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|left"
                android:layout_marginStart="25dp"
                android:backgroundTint="@color/lowerheader_color"
                android:text="@android:string/cancel"
                android:textColor="@color/pantry_app_color" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/deletebtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|left"
                android:backgroundTint="@color/lowerheader_color"
                android:text="@string/delete_text"
                android:textColor="@color/pantry_app_color" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/submitbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|right"
                android:layout_marginEnd="25dp"
                android:backgroundTint="@color/lowerheader_color"
                android:text="@string/create_text"
                android:textColor="@color/pantry_app_color" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>

