<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateItemActivity">

    <TextView
        android:id="@+id/titletv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_item_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="54dp"
        android:layout_marginLeft="54dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="53dp"
        android:layout_marginRight="53dp"
        android:text="@string/aliases_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toStartOf="@+id/unitet"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/unitet" />

    <Button
        android:id="@+id/submitbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/create_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/deletebtn" />

    <Button
        android:id="@+id/cancelbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginLeft="19dp"
        android:layout_marginBottom="16dp"
        android:text="@android:string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/deletebtn"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/deletebtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:text="@string/delete_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/submitbtn"
        app:layout_constraintStart_toEndOf="@+id/cancelbtn" />

    <EditText
        android:id="@+id/nameet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginBottom="34dp"
        android:ems="10"
        android:hint="Name"
        android:inputType="textAutoComplete"
        app:layout_constraintBottom_toTopOf="@+id/expiryet"
        app:layout_constraintStart_toStartOf="@+id/expiryet" />

    <EditText
        android:id="@+id/amountet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="17dp"
        android:ems="10"
        android:hint="@string/amount_text"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/unitet"
        app:layout_constraintEnd_toStartOf="@+id/unitet"
        app:layout_constraintStart_toStartOf="@+id/unitet" />

    <EditText
        android:id="@+id/expiryet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginBottom="39dp"
        android:ems="10"
        android:hint="@string/expiry_text"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/amountet"
        app:layout_constraintEnd_toEndOf="@+id/unitet"
        app:layout_constraintStart_toStartOf="@+id/textView6" />

    <CheckBox
        android:id="@+id/searchbtntog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginBottom="22dp"
        android:text="@string/add_to_search_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toTopOf="@+id/cancelbtn"
        app:layout_constraintStart_toStartOf="@+id/cancelbtn" />

    <EditText
        android:id="@+id/aliaseset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="27dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <EditText
        android:id="@+id/unitet"
        android:layout_width="103dp"
        android:layout_height="43dp"
        android:layout_marginEnd="143dp"
        android:layout_marginRight="143dp"
        android:ems="10"
        android:hint="@string/amount_unit"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>